# quest

./: .env  .gitignore  .prettierrc  Cargo.toml  README.md  account.sql  backup.sql  build.rs  input.css  package-lock.json  package.json  quest.sql  testdb.sql
migrations/: 20231026031049_initial.down.sql  20231026031049_initial.up.sql  README.md
src/: actions.rs  app_state.rs  error.rs  key.rs  lib.rs  main.rs  models.rs  oauth.rs  partials.rs  permissions.rs  routes.rs  session.rs  validation.rs
src/markup/: markup.pest  mod.rs  pretty_debug.rs
src/routes/: auth.rs  home.rs  markup.rs  mod.rs  oauth.rs  prelude.rs  settings.rs
src/routes/auth/: choose_profile.rs  mod.rs
src/routes/qm/: edit.rs  list.rs  mod.rs  new.rs
src/routes/quest/: mod.rs  view.rs
static/js/: defer.js
templates/: base.html  create_account.html  create_quest.html  error.html  index.html  message_page.html
templates/auth/: choose_profile.html  create_account.html  login.html
templates/partials/: failure.html  success.html
templates/qm/: created.html  edit.html  list.html  markup_error.html  new.html
templates/quest/: view.html
templates/settings/: view.html
