[package]
name = "quest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono" ] }
dotenvy = "0.15"
uuid = { version = "1.7", features = ["rng", "serde", "std", "v6"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["std"] }
env_logger = "0.10"
log = "0.4"
concat-arrays = "0.1"
awc = { version = "3", features = ["rustls"] }
oauth2 = "4"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
static-files = "0.2"
futures = "0.3.30"
actix-files = "0.6.5"
mime = "0.3.17"
fred = "9.0.3"
regex = "1.10.4"
rand = "0.8.5"
actix-web-static-files = "4.0.1"
listenfd = "1.0.1"
config = { version = "0.14.0", default-features = false }
crossbeam-channel = "0.5.13"
tokio = { version = "1.37.0", features = ["rt"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
pest = "2.7.11"
askama_escape = "0.10.3"
pest_derive = "2.7.11"
lazy-regex = "3.1.0"

[build-dependencies]
static-files = "0.2"
